# woodaudio

./: .gitignore  Cargo.toml  README  README.md  control.py  downloader.py  manager.py  player.py  playlist.py  requirements.txt  sample_actions.json  sample_config.ini  woodaudio-control.service.template  woodaudio-player.service.template  woodaudio-playlist.service.template  woodaudio.service.template
3d_case/: base_case.scad  index.3mf  index.scad  keycaps.scad  keycaps_base.scad  montage.scad
src/: Cargo.toml  config.rs  discovery.rs  downloader.rs  eventbus.rs  gui.rs  http.rs  main.rs  player.rs  playerbus.rs  playlist.rs  session.rs  sessiongui.rs  state.rs
src/backend/: cover.rs  discovery.rs  downloader.rs  mod.rs  session.rs  storage.rs
src/backend/spotify/: mod.rs
src/backend/tidal/: mod.rs  session.rs
src/gui/: actions.rs  browse.rs  mod.rs  player.rs  session.rs
src/interface/: mod.rs
src/interface/gui/: actions.rs  browse.rs  mod.rs  player.rs  session.rs
src/interface/http/: mod.rs
src/interface/systray/: mod.rs
src/src/: main.rs
ui/: app-window.slint
woodaudio-player/: Cargo.toml
woodaudio-player/src/: main.rs
