[package]
name = "woodaudio-player"
version = "0.4.0"
edition = "2021"

[dependencies]
shellexpand = "3.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = "0.17.1"
rand = "0.8.5"
crossbeam-channel = "0.5.8"
log = "0.4.0"
env_logger = "0.10.0"
rust-ini = "0.20"
home = "0.5.5"
bytes = "1"
tiny_http = "0.11"
macroquad = "0.4.5"
image = "0.25"
qrcode-generator = "4.1.9"
tempfile = "3.10.1"
thread-priority = "0.16.0"
suppaftp = "^5.3.0"
secular = { version="0.3", features=["bmp","normalization"] }
futures = "^0.3.1"

tray-icon = "0.13.1"

[target."cfg(target_os = \"macos\")".dependencies]
core-foundation = "0.9"
cocoa = "0.25"
sysbar = "0.3.0"
