[package]
name = "woodaudio-player"
version = "0.4.0"
edition = "2021"

[dependencies]
shellexpand = "3.1"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = "0.19.0"
metaflac = "0.2.7"
rand = "0.8.5"
crossbeam-channel = "0.5.8"
log = "0.4.0"
env_logger = "0.11.5"
rust-ini = "0.21.0"
home = "0.5.5"
bytes = "1"
tiny_http = "0.12.0"
macroquad = "0.4.5"
image = "0.25"
qrcode-generator = "4.1.9"
tempfile = "3.10.1"
thread-priority = "1.1.0"
suppaftp = "6.0.1"
secular = { version= "1.0.1", features=["bmp","normalization"] }
futures = "^0.3.1"
base64 = "0.22.1"

tray-icon = "0.14.3"

#[target."cfg(target_os = \"macos\")".dependencies]
core-foundation = "0.9"
cocoa = "0.25"
sysbar = "0.3.0"
